# uv-precommit-deptry-test

./: .pre-commit-config.yaml  README.md  pyproject.toml  uh_oh.py
